# CMake-AS7TestProjects

./: Readme.md
AVR8_C_fake_app/: CMakeLists.txt  Readme.md
AVR8_C_fake_app/App/: CMakeLists.txt
AVR8_C_fake_app/App/src/: main.c
AVR8_C_fake_app/TestLib/: CMakeLists.txt
AVR8_C_fake_app/TestLib/inc/: testlib.h
AVR8_C_fake_app/TestLib/src/: testlib.c
AVR8_C_fake_app/Toolchain/: avr8-gcc-toolchain.cmake
AVR8_fake_app/: .gitignore  CMakeLists.txt
AVR8_fake_app/App/: CMakeLists.txt
AVR8_fake_app/TestLib/: CMakeLists.txt
AVR8_fake_app/TestLib/inc/: testlib.h
AVR8_fake_app/TestLib/src/: testlib.c
